# vl-polymarket-watchlist

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
doc/services/: track_whales.md
docs/: architecture.md  market_discovery.md  track_whales.md  whale_trade_first_metrics.md
migrations/: env.py
migrations/versions/: 20260524_0001_create_whale_tracker_tables.py
src/polymarket_storage/: cli.py  settings.py
src/polymarket_storage/core/: logging.py
src/polymarket_storage/market_acquisition/: __init__.py  domain.py  helpers.py  models.py  repository.py  service.py  strategies.py
src/polymarket_storage/polymarket/: client.py
src/vl_polymarket_watchlist/: __init__.py  cli.py  settings.py
src/vl_polymarket_watchlist/core/: logging.py  time.py
src/vl_polymarket_watchlist/market_acquisition/: __init__.py  domain.py  helpers.py  models.py  repository.py  service.py  strategies.py
src/vl_polymarket_watchlist/markets/: repository.py
src/vl_polymarket_watchlist/orderbooks/: __init__.py  domain.py  parser.py  repository.py  service.py
src/vl_polymarket_watchlist/polymarket/: client.py  errors.py
src/vl_polymarket_watchlist/source/: client.py
src/void_liquidity/: __init__.py  settings.py
src/void_liquidity/adapters/: __init__.py
src/void_liquidity/bindings/: __init__.py
src/whale_tracker/: cli.py  settings.py
tests/: __init__.py  test_cli_logging.py  test_polymarket_activity_params.py  test_track_whales_v2.py
tests/adapters/: __init__.py
tests/api/: test_public_read_api.py
tests/bindings/: test_polymarket_signal_discovery.py  test_polymarket_whale_discovery.py  test_polymarket_whale_discovery_v2.py  test_polymarket_whale_markets.py  test_polymarket_whale_qualified.py  test_polymarket_whale_selection.py  test_polymarket_whale_signals.py
tests/core/: test_cache.py  test_database_settings.py  test_logging.py  test_runtime.py  test_scheduler.py
tests/features/: test_whale_plugin.py
tests/logging/: test_log.py
tests/market_acquisition/: test_repository.py  test_strategies.py
tests/markets/: test_repository.py
tests/orderbooks/: test_orderbook_repository.py  test_parser.py  test_repository.py  test_service.py
tests/pipeline/: test_markets_qualified.py  test_markets_whales.py  test_selection_whales.py  test_signals_whales.py
tests/tracker/: test_market_tracker_service.py  test_orderbook_tracker_service.py  test_trade_tracker_service.py  test_whale_filter.py  test_whale_filter_profile.py  test_whale_scoring.py  test_whale_selection.py  test_whale_tracker_service.py
tests/util/: test_log.py
tests/workflows/: test_track_whales.py  test_track_whales_v2_workflow.py  test_whale_discovery_workflow.py  test_whale_market_candidates_workflow.py  test_whale_market_procurement_workflow.py
(+351 files in other folders)
