[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "void-liquidity"
version = "0.1.0"
description = "Market data and trading research system starting with Polymarket."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "httpx==0.28.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "sqlalchemy==2.0.49",
    "python-json-logger==4.1.0",
    "pytest==9.0.3",
    "ruff==0.15.14"
]

[project.scripts]
void-track-whales = "void_liquidity.workflows.track_whales:main"
void-track-whales-v2 = "void_liquidity.workflows.track_whales_v2:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["void_liquidity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
