[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "void-liquidity"
version = "0.1.0"
description = "Market data and trading research system starting with Polymarket."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "asynciolimiter==1.2.0",
    "httpx==0.28.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "sqlalchemy==2.0.49",
    "python-json-logger==4.1.0",
    "pytest==9.0.3",
    "ruff==0.15.14"
]

[project.scripts]
void-track-whales-v2 = "void_liquidity.workflows.whale_discovery:main"
void-whale-market-candidates = "void_liquidity.workflows.whale_market_candidates:main"
void-whale-market-procurement = "void_liquidity.workflows.whale_market_procurement:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["void_liquidity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
