[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whale-tracker"
version = "0.1.0"
description = "Polymarket whale and market tracking service."
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "asynciolimiter==1.2.0",
    "httpx==0.28.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "psycopg[binary]==3.3.4",
    "sqlalchemy==2.0.49",
    "python-json-logger==4.1.0",
    "pytest==9.0.3",
    "ruff==0.15.14",
    "fastapi==0.136.3",
    "uvicorn==0.48.0"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[project.scripts]
whale-tracker = "whale_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["whale_tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
